--- a/user/templates/user/password_reset_confirm.html
+++ b/user/templates/user/password_reset_confirm.html
@@ -17,9 +17,12 @@
                 </button>
             {% endif %}
 
-            <form method="POST" class="w-full lg:max-w-[400px] shadow-xl ring-2 ring-gray-900/5 px-6 pt-10 pb-8 flex flex-col gap-3 lg:gap-4">
+
+            <form method="POST" id="reset-password-form" class="w-full lg:max-w-[400px] shadow-xl ring-2 ring-gray-900/5 px-6 pt-10 pb-8 flex flex-col gap-3 lg:gap-4">
                 {% csrf_token %}
                 <h3 class="text-2xl font-bold mb-1.5">Reset Your Password</h3>
+
+                <div id="message" class="text-center text-sm font-medium p-2 w-max hidden"></div>
 
                 <div>
                     <label class="label-primary" for="id_new_password1">New Password</label>
@@ -40,3 +43,62 @@
 
     
 {% endblock content %}
+
+{% block script %}
+    <script>
+        async function handlePasswordReset(event) {
+            event.preventDefault();
+
+            const form = event.target;
+            const formData = new FormData(form);
+            const messageBox = form.querySelector('#message')
+
+            try{
+                const uid = document.getElementById('uid').value; 
+                const token = document.getElementById('token').value;
+
+                const response = await fetch(`/user/password-reset-confirm/${uid}/${token}/`, {
+                    method: "POST",
+                    headers: {
+                        "X-Requested-With": "XMLHttpRequest",
+                        // "Content-Type": "application/json", // i am not sending json data
+                        "X-CSRFToken": getCsrfToken(),
+                    },
+                    body: formData,
+                });
+
+                const result = await response.json();
+
+                if(!response.ok){
+                    console.log(result.message);
+                    messageBox.classList.remove('hidden');
+                    messageBox.classList.add('text-red-800', 'bg-red-100');
+                    messageBox.innerHTML = result.message;
+                    return;
+                } 
+
+                // if successful
+                messageBox.classList.remove('hidden')
+                messageBox.classList.add('text-green-800', 'bg-green-100');
+                messageBox.innerHTML = result.message;
+                console.log(result.message);
+                
+                 // Redirect after 6 seconds
+                 setTimeout(() => {
+                    window.location.href = "{% url 'user:password_reset_complete' %}"; // Redirect to success page
+                }, 6000); 
+
+            } catch (error) {
+                messageBox.classList.remove('hidden');
+                messageBox.classList.add('text-red-800', 'bg-red-100');
+                messageBox.innerHTML = "An unexpected error occurred. Please try again.";
+                console.error('Error:', error);
+            }
+
+        }
+
+        // document.getElementById('reset-password-form').addEventListener('submit', handlePasswordReset);
+    </script>
+{% endblock script %}
+    
+
