--- a/listing/templates/listing/details.html
+++ b/listing/templates/listing/details.html
@@ -4,7 +4,7 @@
 {% block title %} {{listing.title}} {% endblock %}
 
 {% block content %}
-    <main class="responsive-padding grid grid-cols-1 lg:grid-cols-3 gap-8 xl:gap-16 mt-9">
+    <main class="responsive-padding grid grid-cols-1 md:grid-cols-3 gap-8 xl:gap-16 mt-9">
         <section class="col-span-2 flex flex-col gap-8">
             <div x-data="{            
                 slides: [                
@@ -41,14 +41,14 @@
             }" class="relative w-full">
             
                 <!-- previous button -->
-                <button type="button" class="absolute left-5 top-1/2 z-20 flex rounded-full -translate-y-1/2 items-center justify-center bg-surface/40 p-2 text-on-surface transition hover:bg-surface/60 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary active:outline-offset-0 dark:bg-surface-dark/40 dark:text-on-surface-dark dark:hover:bg-surface-dark/60 dark:focus-visible:outline-primary-dark" aria-label="previous slide" x-on:click="previous()">
+                <button type="button" class="absolute left-5 top-1/3 z-20 flex rounded-full -translate-y-1/2 items-center justify-center bg-surface/40 p-2 text-on-surface transition hover:bg-surface/60 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary active:outline-offset-0 dark:bg-surface-dark/40 dark:text-on-surface-dark dark:hover:bg-surface-dark/60 dark:focus-visible:outline-primary-dark" aria-label="previous slide" x-on:click="previous()">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="white" fill="none" stroke-width="3" class="size-5 md:size-6 pr-0.5" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
                     </svg>
                 </button>
             
                 <!-- next button -->
-                <button type="button" class="absolute right-5 top-1/2 z-20 flex rounded-full -translate-y-1/2 items-center justify-center bg-surface/40 p-2 text-on-surface transition hover:bg-surface/60 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary active:outline-offset-0 dark:bg-surface-dark/40 dark:text-on-surface-dark dark:hover:bg-surface-dark/60 dark:focus-visible:outline-primary-dark" aria-label="next slide" x-on:click="next()">
+                <button type="button" class="absolute right-5 top-1/3 z-20 flex rounded-full -translate-y-1/2 items-center justify-center bg-surface/40 p-2 text-on-surface transition hover:bg-surface/60 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary active:outline-offset-0 dark:bg-surface-dark/40 dark:text-on-surface-dark dark:hover:bg-surface-dark/60 dark:focus-visible:outline-primary-dark" aria-label="next slide" x-on:click="next()">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="white" fill="none" stroke-width="3" class="size-5 md:size-6 pl-0.5" aria-hidden="true">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                     </svg>
@@ -119,7 +119,7 @@
         </section>
         
 
-        <section class="bg-white w-full lg:col-span-1 lg:sticky lg:top-12 lg:bottom-0 pt-8 self-start fixed bottom-5">
+        <section class="bg-white w-full md:col-span-1 md:sticky md:top-12 lg:bottom-0 pt-8 self-start fixed bottom-0 left-0">
             <div class="flex flex-col gap-6 overflow-hidden p-3 lg:p-8 rounded-xl shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] outline-1 outline-offset-[-1px] outline-[#314158]">
                 <div class="flex justify-between">
                     <h2 class="w-2/3 text-xl font-bold">{{ listing.title }}</h2>
@@ -144,9 +144,9 @@
                     </div>
                 </div>
 
-                <div class="flex lg:flex-col flex-row gap-4">
-                    {% component "button" label="Enquire Now" type="primary" width="full" %} {% endcomponent %}
-                    {% component "button" label="<i class='fa fa-whatsapp text-white'></i> WhatsApp" type="primary" extraclass="bg-green-600" width="full" %} {% endcomponent %}
+                <div class="flex lg:flex-col flex-row flex-wrap justify-center items-center gap-4">
+                    {% component "button" label="Enquire Now" type="primary" width="max" %} {% endcomponent %}
+                    {% component "button" label="<i class='fa fa-whatsapp text-white'></i> WhatsApp" type="primary" extraclass="bg-green-600" width="max" %} {% endcomponent %}
                 </div>
             </div>
 
