--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -43,7 +43,7 @@
     {% block styleblock %} {% endblock %}
 
 </head>
-<body class='font-base text-gray-900 overflow-x-hidden' x-data="{ openLoginModal: false }">
+<body class='font-base text-gray-900' x-data="{ openLoginModal: false }">
 
     <header x-data="{ isOpen:false }" class="w-full bg-white border-gray-200 py-2.5 sticky top-0 z-30 drop-shadow-md">
         <div id="headerWrapper" class="relative flex gap-6 items-center justify-between mx-auto">
