--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -54,8 +54,8 @@
 
         <!-- Content -->
         <div class="relative z-10">
-            <h2 class="text-2xl font-bold mb-4" data-aos="fade-right">Are You Interested In Our Real Estate?</h2>
-            {% component "button" label="Find out More" href="{% url 'core:real_estate' %}" type="primary" attr="data-aos='fade-right' data-aos-duration='900'" %} {% endcomponent %}
+            <h2 class="text-2xl font-bold mb-4" data-aos="fade-in">Are You Interested In Our Real Estate?</h2>
+            {% component "button" label="Find out More" href="{% url 'core:real_estate' %}" type="primary" attr="data-aos='fade-in' data-aos-duration='900'" %} {% endcomponent %}
         </div>
 
     </section>
@@ -87,8 +87,8 @@
     </section>
 
     <div class="flex flex-col gap-20">
-        <section class="bg-slate-100 flex flex-col gap-3 lg:flex-row lg:justify-between lg:items-center">
-            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20" data-aos="fade-right">
+        <section class="bg-slate-100 flex flex-col gap-3 lg:flex-row lg:justify-between lg:items-center" data-aos="fade-up">
+            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20">
                 <h3 class="text-4xl font-extrabold mb-3"><span class="text-red-600 font-cursive">Unlock</span> Your Global Academic Dream</h3>
                 <p>Are you a scholar seeking to explore new horizons, meet new people, and achieve academic excellence abroad? Look no further! At Eaglespoint Horizon Limited, we specialize in simplifying the study abroad process, ensuring a seamless and enjoyable experience for you.
                 </p>
@@ -97,7 +97,7 @@
         </section>
     
         <section class="flex flex-col gap-3 lg:flex-row-reverse lg:justify-between lg:items-center" data-aos="fade-up">
-            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pr-20" data-aos="fade-left">
+            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pr-20">
                 <h3 class="text-4xl font-extrabold mb-3 pr-20"><span class="text-red-600 font-cursive">Worry-less</span> about SAT, TOEFL, IELTS</h3>
                 <p>Our team of experienced and professional tutors will coach and prepare you to achieve excellent results and higher scores. With higher scores, you'll increase your chances of securing a scholarship!</p>
             </div>
@@ -105,7 +105,7 @@
         </section>
         
         <section class="bg-slate-100 flex flex-col gap-3 lg:flex-row lg:justify-between lg:items-center" data-aos="fade-up">
-            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20" data-aos="fade-right">
+            <div class="responsive-padding lg:p-0 lg:w-1/2 lg:pl-20">
                 <h3 class="text-4xl font-extrabold mb-3"><span class="text-red-600 font-cursive">Enjoy</span> Flexible Learning Options</h3>
                 <p>Our services cater to both schools and individuals. For schools, we'll send a team of capable teachers to instruct students within their primary learning environment, ensuring a seamless integration with curricular activities. Individuals can join us at our conducive learning environment or opt for online courses, eliminating physical barriers.
                 </p>
@@ -115,7 +115,7 @@
     </div>
 
     <!-- Stats and Partner Section -->
-    {% comment %} {% component "stats_partner" %} {% endcomponent %} {% endcomment %}
+    {% component "stats_partner" %} {% endcomponent %}
 
     <section class="testimonial responsive-padding relative bg-repeat py-8 bg-[100px] text-white" style="background-image: url({% static 'images/pattern4.svg' %}); background-color:blue;" data-aos="fade-up">
         <!-- overlay -->
